added more content

--- a/music_folder/index2.html
+++ b/music_folder/index2.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="table2.css">
-    <title>Document</title>
+    <title>forms</title>
 </head>
 <body>
-     <tr>
-         <h1 style="text-align: center;">
+       <h1 style="text-align: center;">
             <span style="color: rgb(226, 85, 163);">Check out the latest from</span>
             <span style="color: rgb(143, 54, 170);">Los Enanitos Verdes</span>
          </h1>
@@ -25,28 +24,54 @@
           <tr style="height: 130px;">
             <td style="font-size:150%";>mmmm</td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/song/amores-lejanos/1443471532"></iframe></td>
+             <tr>
+            <td style="font-size:150%";>mmmm</td>
+            <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
+        </tr>
 
-             <form action="">
+         <tr>
+            <td style="font-size:150%";>mmmm</td>
+            <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
+        </tr>
+
+         <tr>
+            <td style="font-size:150%";>mmmm</td>
+            <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
+        </tr>
+
+         <tr>
+            <td style="font-size:150%";>mmmm</td>
+            <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
+        </tr>
+
+    <!-- create forms -->
+    <form action="">
         <label for="">first name</label>
         <input type="text">
         <br>
         <label for="">last name</label>
         <input type="text">
         <br>
-        <label for="">gender</label>
-    <input type="radio" id="css" name="fav_language" value="CSS">
-    <label for="css">male:</label><br><label for="javascript">Female:</label>
+         <input type="radio" id="html" name="fav_language" value="HTML">
+<label for="html">Male</label>
+<input type="radio" id="css" name="fav_language" value="CSS">
+<label for="css">Female</label><br>
+        <label for="">username</label>
+        <input type="text">
         <br>
         <label for="">password</label>
+        <input type="password"> 
+        <br>
+        <label for="">retype password</label>
         <input type="password">
         <br>
-        <label for="">email</label>
-        <input type="email">
+        <label for="">age</label>
+        <input type ="number">
         <br>
-        <label for="">ethnicity</label>
+        <label for="">Race</label>
         <select name="" id="">
-            <option value="Asian">Asian</option>
-            <option value="White">White</option>
+            <option value="American Indian">Asian</option>
+            <option value="Alaska Native">White</option>
             <option value="African American">African American</option>
             <option value="Middle Eastern">Middle eastern</option>
             <option value="Pacific islander">Pacific Islander</option>
