added more content

--- a/music_folder/index2.html
+++ b/music_folder/index2.html
@@ -17,34 +17,33 @@
      <p style="background-color: rgba(0, 0, 0, 0.24);"></p>
      <table style="width: 40%;">
           <tr>
-            <td style="font-size:150%";>mmmm</td>
+            <td style="font-size:150%";></td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/song/lamento-boliviano/721632344"></iframe></td>
         </tr>
         
           <tr style="height: 130px;">
-            <td style="font-size:150%";>mmmm</td>
+            <td style="font-size:150%";></td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/song/amores-lejanos/1443471532"></iframe></td>
              <tr>
-            <td style="font-size:150%";>mmmm</td>
+            <td style="font-size:150%";></td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
         </tr>
 
          <tr>
-            <td style="font-size:150%";>mmmm</td>
+            <td style="font-size:150%";></td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
         </tr>
 
          <tr>
-            <td style="font-size:150%";>mmmm</td>
+            <td style="font-size:150%";></td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
         </tr>
 
          <tr>
-            <td style="font-size:150%";>mmmm</td>
+            <td style="font-size:150%";></td>
             <td><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src=""></iframe></td>
         </tr>
 
-    <!-- create forms -->
     <form action="">
         <label for="">first name</label>
         <input type="text">
@@ -53,9 +52,9 @@
         <input type="text">
         <br>
          <input type="radio" id="html" name="fav_language" value="HTML">
-<label for="html">Male</label>
-<input type="radio" id="css" name="fav_language" value="CSS">
-<label for="css">Female</label><br>
+        <label for="html">Male</label>
+        <input type="radio" id="css" name="fav_language" value="CSS">
+    <label for="css">Female</label><br>
         <label for="">username</label>
         <input type="text">
         <br>
@@ -77,16 +76,19 @@
             <option value="Pacific islander">Pacific Islander</option>
         </select>
         <br>
-        <label for="">lets blog</label>
+     <label for="">Country</label>
+        <select name="" id="">
+            <option value="United States">United States</option>
+            <option value="Canada">Canada</option>
+            <option value="United kingdom">United Kingdom</option>
+        </select>
+        <br>
+        <label for="">Why are you the biggest fan?</label>
         <br>
         <textarea name="" id="" cols="30" rows="10"></textarea>
         <br>
-        <input type="radio" id="html" name="fav_language" value="HTML">
-<label for="html">0-30</label><br>
-<input type="radio" id="css" name="fav_language" value="CSS">
-<label for="css">31-60</label><br>
-<input type="radio" id="javascript" name="fav_language" value="JavaScript">
-<label for="javascript">61-90</label>
+        <button type="submit">Submit</button>
+
     </form>
 </body>
 </html>
